Tercer avance TP
Se implementó un grid para una mejor estructura en el bloque Section

--- a/index.html
+++ b/index.html
@@ -93,14 +93,53 @@
             </aside>
     
             <section class="section">
-                <img src="./imagenes/micro.jpg" alt="img1" class="img1">
-                <img src="./imagenes/ram.jpeg" alt="img2" class="img2">
-                <img src="" alt="img3" class="img3">
-                <img src="" alt="img4" class="img4">
-                <img src="" alt="img5" class="img5">
-                <img src="" alt="img6" class="img6">
-                <img src="" alt="img7" class="img7">
-                <img src="" alt="img8" class="img8">
+                <div>
+                    <img src="./imagenes/micro.jpg" alt="img1" class="img1">
+                    <h4> AMD Ryzen 5 4600 </h4>
+                    <h4> AMD Ryzen 5 4600 </h4>
+                </div>
+
+                <div>
+                    <img src="./imagenes/ram.jpeg" alt="img2" class="img2">
+                    <h4> AMD Ryzen 5 4600 </h4>
+                    <h4> AMD Ryzen 5 4600 </h4>
+                </div>
+
+                <div>
+                    <img src="./imagenes/placa madre.jpg" alt="img3" class="img3">
+                    <h4> AMD Ryzen 5 4600 </h4>
+                    <h4> AMD Ryzen 5 4600 </h4>
+                </div>
+
+                <div>
+                    <img src="./imagenes/disco.jpg" alt="img4" class="img4">
+                    <h4> AMD Ryzen 5 4600 </h4>
+                    <h4> AMD Ryzen 5 4600 </h4>
+                </div>
+
+                <div>
+                    <img src="" alt="img5" class="img5">
+                    <h4> AMD Ryzen 5 4600 </h4>
+                    <h4> AMD Ryzen 5 4600 </h4>
+                </div>
+
+                <div>
+                    <img src="" alt="img6" class="img6">
+                    <h4> AMD Ryzen 5 4600 </h4>
+                    <h4> AMD Ryzen 5 4600 </h4>
+                </div>
+
+                <div>
+                    <img src="" alt="img7" class="img7">
+                    <h4> AMD Ryzen 5 4600 </h4>
+                    <h4> AMD Ryzen 5 4600 </h4>
+                </div>
+
+                <div>
+                    <img src="" alt="img8" class="img8">
+                    <h4> AMD Ryzen 5 4600 </h4>
+                    <h4> AMD Ryzen 5 4600 </h4>
+                </div>
             </section>
             
         </div>
