Cuarto avance TP

--- a/index.html
+++ b/index.html
@@ -93,51 +93,51 @@
             </aside>
     
             <section class="section">
-                <div>
+                <div class="art1">
                     <img src="./imagenes/micro.jpg" alt="img1" class="img1">
-                    <h4> AMD Ryzen 5 4600 </h4>
+                    <h4> Microprocesador AMD Ryzen 5 4600 </h4>
                     <h4> AMD Ryzen 5 4600 </h4>
                 </div>
 
-                <div>
+                <div class="art2">
                     <img src="./imagenes/ram.jpeg" alt="img2" class="img2">
-                    <h4> AMD Ryzen 5 4600 </h4>
+                    <h4> Memoria RAM Kingston Fury Beast 8GB DDR4 x2 </h4>
                     <h4> AMD Ryzen 5 4600 </h4>
                 </div>
 
-                <div>
+                <div class="art3">
                     <img src="./imagenes/placa madre.jpg" alt="img3" class="img3">
-                    <h4> AMD Ryzen 5 4600 </h4>
+                    <h4> Placa Madre ASUS Prime B450M-A II </h4>
                     <h4> AMD Ryzen 5 4600 </h4>
                 </div>
 
-                <div>
+                <div class="art4">
                     <img src="./imagenes/disco.jpg" alt="img4" class="img4">
-                    <h4> AMD Ryzen 5 4600 </h4>
-                    <h4> AMD Ryzen 5 4600 </h4>
-                </div>
-
-                <div>
-                    <img src="" alt="img5" class="img5">
-                    <h4> AMD Ryzen 5 4600 </h4>
+                    <h4> Disco sólido Kingston 240 GB </h4>
                     <h4> AMD Ryzen 5 4600 </h4>
                 </div>
 
-                <div>
-                    <img src="" alt="img6" class="img6">
-                    <h4> AMD Ryzen 5 4600 </h4>
-                    <h4> AMD Ryzen 5 4600 </h4>
-                </div>
-
-                <div>
-                    <img src="" alt="img7" class="img7">
-                    <h4> AMD Ryzen 5 4600 </h4>
+                <div class="art5">
+                    <img src="./imagenes/gabinete.jpg" alt="img5" class="img5">
+                    <h4> Gabinete Thermaltake Divider 170 TG Argb Black </h4>
                     <h4> AMD Ryzen 5 4600 </h4>
                 </div>
 
-                <div>
-                    <img src="" alt="img8" class="img8">
+                <div class="art6">
+                    <img src="./imagenes/monitor.jpg" alt="img6" class="img6">
+                    <h4> Monitor ChiQ 24F650 23.8" FHD 75Hz </h4>
                     <h4> AMD Ryzen 5 4600 </h4>
+                </div>
+
+                <div class="art7">
+                    <img src="./imagenes/mouse.jpg" alt="img7" class="img7">
+                    <h4> Mouse Inalámbrico Logitech G305 Lightspeed Black </h4>
+                    <h4> AMD Ryzen 5 4600 </h4>
+                </div>
+
+                <div class="art8">
+                    <img src="./imagenes/teclado.jpg" alt="img8" class="img8">
+                    <h4> Teclado Redragon Waveimpact S103 </h4>
                     <h4> AMD Ryzen 5 4600 </h4>
                 </div>
             </section>
