Ultimo avance  TP
Se terminó de maquetar la estructura y darle un poco de estética

--- a/index.html
+++ b/index.html
@@ -100,49 +100,77 @@
                             Microprocesador AMD Ryzen 5 4600G 
                         </a>
                     </h3>
-                    <h4 class="item_description"> AMD Ryzen 5 4600 </h4>
+                    <h2 class="item_description"> $140.000 </h2>
                 </div>
 
                 <div class="art">
                     <img src="./imagenes/ram.jpeg" alt="img2" class="img">
-                    <h3 class="item_description"> Memoria RAM Kingston Fury Beast 8GB DDR4 x2 </h3>
-                    <h4 class="item_description"> AMD Ryzen 5 4600 </h4>
+                    <h3 class="item_description">
+                        <a href="" class="item_name">
+                            Memoria RAM Kingston Fury Beast 8GB DDR4 x2
+                        </a>
+                    </h3>
+                    <h2 class="item_description"> $80.000 </h2>
                 </div>
 
                 <div class="art">
                     <img src="./imagenes/placa madre.jpg" alt="img3" class="img">
-                    <h3 class="item_description"> Placa Madre ASUS Prime B450M-A II </h3>
-                    <h4 class="item_description"> AMD Ryzen 5 4600 </h4>
+                    <h3 class="item_description">
+                        <a href="" class="item_name">
+                            Placa Madre ASUS Prime B450M-A II
+                        </a>
+                    </h3>
+                    <h2 class="item_description"> $125.000 </h2>
                 </div>
 
                 <div class="art">
                     <img src="./imagenes/disco.jpg" alt="img4" class="img">
-                    <h3 class="item_description"> Disco sólido Kingston 240GB </h3>
-                    <h4 class="item_description"> AMD Ryzen 5 4600 </h4>
+                    <h3 class="item_description">
+                        <a href="" class="item_name">
+                            Disco sólido Kingston 240GB
+                        </a>
+                    </h3>
+                    <h2 class="item_description"> $50.000 </h2>
                 </div>
 
                 <div class="art">
                     <img src="./imagenes/gabinete.jpg" alt="img5" class="img">
-                    <h3 class="item_description"> Gabinete Thermaltake Divider 170 TG ARGB </h3>
-                    <h4 class="item_description"> AMD Ryzen 5 4600 </h4>
+                    <h3 class="item_description">
+                        <a href="" class="item_name">
+                            Gabinete Thermaltake Divider 170 TG ARGB
+                        </a>
+                    </h3>
+                    <h2 class="item_description"> $120.000 </h2>
                 </div>
 
                 <div class="art">
                     <img src="./imagenes/monitor.jpg" alt="img6" class="img">
-                    <h3 class="item_description"> Monitor ChiQ 24F650 23.8" FHD 75Hz </h3>
-                    <h4 class="item_description"> AMD Ryzen 5 4600 </h4>
+                    <h3 class="item_description">
+                        <a href="" class="item_name">
+                            Monitor CHiQ 24F650 23.8" FHD 75Hz
+                        </a>
+                    </h3>
+                    <h2 class="item_description"> $150.000 </h2>
                 </div>
 
                 <div class="art">
                     <img src="./imagenes/mouse.jpg" alt="img7" class="img">
-                    <h3 class="item_description"> Mouse Inalámbrico Logitech G305 Lightspeed </h3>
-                    <h4 class="item_description"> AMD Ryzen 5 4600 </h4>
+                    <h3 class="item_description">
+                        <a href="" class="item_name">
+                            Mouse Inalámbrico Logitech G305 Lightspeed
+                        </a>
+                    </h3>
+                    <h2 class="item_description"> $50.000 </h2>
                 </div>
 
                 <div class="art">
                     <img src="./imagenes/teclado.jpg" alt="img8" class="img">
-                    <h3 class="item_description"> Teclado Redragon Waveimpact S103 </h3>
-                    <h4 class="item_description"> AMD Ryzen 5 4600 </h4>
+                    <h3 class="item_description">
+                        <a href="" class="item_name">
+                            Teclado Redragon Waveimpact S103
+                        </a>
+                    </h3>
+                    <h2 class="item_description"> $30.000 </h2>
                 </div>
             </section>
             
@@ -150,45 +178,45 @@
     
         <footer>
             <div class="interes">
-                <h2> Informacion </h2>
-                <h3> 
-                    <a href=""> Empresa </a>
+                <h2 class="footer_texts"> Informacion </h2>
+                <h3 class="footer_texts"> 
+                    <a href="" class="footer_links"> Empresa </a>
                 </h3>
-                <h3> 
-                    <a href=""> Contacto </a>
-                </h3>
-            </div>
-
-            <div class="interes">
-                <h2> Enlaces útiles </h2>
-                <h3> 
-                    <a href=""> Garantías </a>
-                </h3>
-                <h3> 
-                    <a href=""> Formas de pago </a>
+                <h3 class="footer_texts"> 
+                    <a href="" class="footer_links"> Contacto </a>
                 </h3>
             </div>
 
             <div class="interes">
-                <h2> Novedades </h2>
-                <h3> 
-                    <a href=""> Suscripción </a>
+                <h2 class="footer_texts"> Enlaces útiles </h2>
+                <h3 class="footer_texts"> 
+                    <a href="" class="footer_links"> Garantías </a>
                 </h3>
-                <h3> 
-                    <a href=""> Blog </a>
+                <h3 class="footer_texts"> 
+                    <a href="" class="footer_links"> Formas de pago </a>
                 </h3>
             </div>
 
             <div class="interes">
-                <h2> Atención </h2>
-                <h3> Lun a Vie 8:30 a 12:30 y de 16:30 a 20:30 </h3>
-                <h3> Sáb 8:30 a 13 </h3>
+                <h2 class="footer_texts"> Novedades </h2>
+                <h3 class="footer_texts"> 
+                    <a href="" class="footer_links"> Suscripción </a>
+                </h3>
+                <h3 class="footer_texts"> 
+                    <a href="" class="footer_links"> Blog </a>
+                </h3>
             </div>
 
             <div class="interes">
-                <h2> Desarrollado por </h2>
-                <h3> 
-                    <a href=""> Empresa </a>
+                <h2 class="footer_texts"> Atención </h2>
+                <h3 class="footer_texts"> Lun a Vie 8:30 a 12:30 y de 16:30 a 20:30 </h3>
+                <h3 class="footer_texts"> Sáb 8:30 a 13 </h3>
+            </div>
+
+            <div class="interes dev">
+                <h2 class="footer_texts"> Desarrollado por </h2>
+                <h3 class="footer_texts"> 
+                    <a href="" class="footer_links"> Bruno Ramiro Gaspar </a>
                 </h3>
             </div>
         </footer>
