--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -86,7 +86,7 @@
                 </h2>
 
                 <h2>
-                    <a href="" class="list_options">
+                    <a href="página_figuras.html" class="list_options">
                         Telefonía
                     </a>
                 </h2>
